# jsona

./: .gitignore  .vscodeignore  404.html  Argcfile.sh  Cargo.toml  LICENSE_MIT  Makefile.toml  README.md  Runmefile.sh  argcfile  argcfile.sh  cli.html  config.html  index.html  justfile  lsp.html  package.json  print.html  rollup.config.browser-extension.js  rollup.config.browser-server.js  rollup.config.js  schema.html  searchindex.js  searchindex.json  tsconfig.json
.github/workflows/: ci.yaml  nightly.yaml  release.yaml  site.yaml  vscode-nightly.yaml  vscode-release.yaml
crates/jsona/: Cargo.toml  README.md
crates/jsona-ast/: Cargo.toml  README.md
crates/jsona-ast/examples/: from-ast.rs  to-ast.rs
crates/jsona-ast/src/: lib.rs  mapper.rs
crates/jsona-cli/: Cargo.toml  README.md
crates/jsona-cli/src/: lib.rs  printing.rs
crates/jsona-cli/src/commands/: format.rs  lint.rs  lsp.rs  mod.rs  queries.rs
crates/jsona-common/: Cargo.toml
crates/jsona-common/src/: config.rs  convert.rs  jsona_schema.rs  lib.rs  util.rs
crates/jsona-common/src/environment/: mod.rs
crates/jsona-common/src/schema/: cache.rs  (+3 more)
crates/jsona-fmt/: Cargo.toml
crates/jsona-fmt/src/: common.rs  lib.rs  node.rs  options.rs  value.rs
crates/jsona-lsp/: Cargo.toml  README.md
crates/jsona-lsp/src/: config.rs  diagnostics.rs  lib.rs  query.rs  world.rs
crates/jsona-lsp/src/handlers/: completion.rs  configuration.rs  document_symbols.rs  documents.rs  folding_ranges.rs  formatting.rs  hover.rs  initialize.rs  mod.rs  schema.rs  selection_ranges.rs  workspaces.rs
crates/jsona-lsp/src/lsp_ext/: notification.rs  request.rs
crates/jsona-schema/: Cargo.toml  README.md
crates/jsona-schema-validator/: Cargo.toml  README.md
crates/jsona-schema-validator/examples/: jsona-schema-value.rs  query-schema.rs  validate.rs
crates/jsona-schema-validator/src/: jsonschema.rs  lib.rs  validates.rs
crates/jsona-schema/examples/: to-json-schema.rs
crates/jsona-schema/src/: error.rs  lib.rs  schema.rs
crates/jsona-util/: Cargo.toml
crates/jsona-util/src/: config.rs  jsona_schema.rs  lib.rs  util.rs
crates/jsona-util/src/environment/: mod.rs  native.rs
crates/jsona-util/src/schema/: associations.rs  cache.rs  fetcher.rs  mod.rs
crates/jsona-util/src/util/: glob_rule.rs  mod.rs  path.rs  url.rs
crates/jsona-wasm-cli/: Cargo.toml
crates/jsona-wasm-cli/src/: environment.rs  lib.rs  lsp.rs
crates/jsona-wasm-core/: Cargo.toml
crates/jsona-wasm-core/src/: lib.rs
crates/jsona-wasm-schema/: Cargo.toml
crates/jsona-wasm-schema/src/: lib.rs
crates/jsona/examples/: ast.rs  format.rs  parse_dom.rs  parse_value.rs  print_syntax.rs  syntax.rs  to_string.rs  value.rs
crates/jsona/src/: error.rs  formatter.rs  lib.rs  parser.rs  syntax.rs  value.rs
crates/jsona/src/ast/: mapper.rs  mod.rs
crates/jsona/src/dom/: error.rs  from_syntax.rs  from_value.rs  index.rs  json.rs  key.rs  keys.rs  macros.rs  mod.rs  node.rs  query_keys.rs  serde.rs  to_jsona.rs  to_string.rs  visitor.rs
crates/jsona/src/formatter/: common.rs  format.rs  mod.rs  options.rs
crates/jsona/src/util/: escape.rs  glob.rs  glob_key.rs  mapper.rs  mod.rs  pattern.rs  quote.rs  text_range.rs
crates/jsona/src/value/: from_node.rs  mod.rs  to_jsona.rs
editors/monaco/: README.md  package.json  rollup.config.worker.js  rollup.config.worker.mjs  tsconfig.json
editors/monaco/src/: index.ts  jsona.worker.ts
editors/utils/: .gitignore  README.md  package.json  tsconfig.build.json
editors/utils/src/: index.ts  jsona.worker.ts
editors/vscode/: .vscodeignore  LICENSE.md  README.md  package.json  rollup.config.browser-extension.js  rollup.config.browser-extension.mjs  rollup.config.browser-server.js  rollup.config.browser-server.mjs  rollup.config.js  rollup.config.mjs  tsconfig.json
editors/vscode/src/: client.ts  extension.ts  import.d.ts  jsonaValidation.ts  server-worker.ts  server.ts  util.ts
editors/vscode/syntaxes/: jsona.json
guide/: book.toml
guide/src/: SUMMARY.md  cli.md  config.md  lsp.md  schema.md  spec.md
js/: package.json
js/core/: README.md  build.cjs  build.js  index.d.ts  index_web.d.ts  package.json  rollup.config.js  tsconfig.json
js/core/src/: index.ts  types.ts
js/lsp/: README.md  build.cjs  package.json  rollup.config.js  tsconfig.json
js/lsp/src/: helper.ts  index.ts  index_worker.d.ts  types.ts
js/schema/: README.md  build.js  index.d.ts  index_web.d.ts  package.json  rollup.config.js
js/schema/src/: index.ts  types.ts
js/util-types/: README.md  package.json  rollup.config.js  rollup.config.mjs  tsconfig.json
js/util-types/src/: config.ts  environment.ts  formatter.ts  index.ts
legacy/src/: lib.rs  loader.rs
legacy/tests/: test_jsona_example.rs
legacy/tests/spec/: jsona_example.jsona  jsona_example_event.txt
lib/: jsona_js.d.ts  package.json
src/: ast.rs  client.ts  emitter.rs  error.rs  extension.ts  import.d.ts  lexer.rs  lib.rs  loader.rs  parser.rs  scanner.rs  server-worker.ts  server.ts  syntax.rs  util.ts  value.rs
src/commands/: schema.ts
test-data/: syntax.jsona
tests/: demo.rs  test.js  test_jsona_example.rs
tests/crate/: Cargo.toml
tests/crate/src/: helper.rs  lib.rs  macros.rs  test_jsona.rs  test_schema.rs  test_schema_validator.rs
tests/crate/src/snapshots/: test_crate__test_jsona__format_spec.snap  test_crate__test_jsona__parse_spec.snap  test_crate__test_jsona__syntax_spec.snap  test_crate__test_schema__parse_spec.snap  test_crate__test_schema__point_spec.snap  test_crate__test_schema_validator__point_spec.snap
tests/fixtures/: schema.jsona  spec.jsona
tests/js/: core.test.ts  helper.ts  package.json  schema.test.ts  tsconfig.json
tests/js/__snapshots__/: core.test.ts.snap  schema.test.ts.snap
tests/spec/: demo.emit.jsona  demo.ev.txt  demo.jsona  demo.tok.txt  jsona_example_tok.txt  jsona_example_value.json  simple_openapi.json  simple_openapi.jsona  simple_openapi_ast.json  test_jsona_example.jsona  test_jsona_example_emit.jsona  test_jsona_example_event.txt  test_jsona_example_tok.txt  test_jsona_example_value.json
(+2 files in other folders)
