[package]
name = "jsona"
version = "0.1.0"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional=true }
indexmap = { version = "1.6"}

[features]
serde-support = ["serde", "indexmap/serde-1"]

[dev-dependencies]
serde_json = "1"
