[package]
name = "jsona"
version = "0.2.2"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"
description = "JSONA is JSON superset. JSONA = JSON (less grammatical restrictions) + Annotation."
documentation = "https://github.com/sigoden/jsona"
repository = "https://github.com/sigoden/jsona"
keywords = ["jsona", "parser"]
categories = ["encoding", "parser-implementations"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
