[package]
name = "jsona-ast"
version = "0.1.0"
edition = "2021"
description = "Parse ast for jsona"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rowan = "0.15"
jsona = { path = "../jsona" }