[package]
name = "jsona-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "3.2", features = ["derive", "cargo"] }
codespan-reporting = "0.11"
glob = "0.3"
itertools = "0.10"
jsona = { path = "../jsona" }
jsona-util = { path = "../jsona-util" }
jsona-lsp = { path = "../jsona-lsp", optional = true }
reqwest = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"
serde_json = { version = "1", features = ["preserve_order"] }
async-ctrlc = { version = "1.2", features = ["stream"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
atty = "0.2"
tokio = { version = "1.20", features = [
    "macros",
    "sync",
    "fs",
    "time",
    "io-std",
    "rt-multi-thread",
    "parking_lot",
] }
lsp-async-stub = { version = "0.6", features = ["tokio-tcp", "tokio-stdio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.20", features = ["sync", "parking_lot", "io-util"] }

[[bin]]
name = "jsona"
path = "bin/jsona.rs"


[features]
default = ["lsp"]
lsp = ["jsona-lsp", "async-ctrlc"]