[package]
name = "jsona-cli"
version = "0.1.0"
edition = "2021"
description = "A JSONA toolkit CLI"
homepage = "https://jsona.github.io/jsona/cli"
repository = "https://github.com/jsona/jsona"
keywords = ["jsona", "parser", "formatter", "linter"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "3.2", features = ["derive", "cargo"] }
codespan-reporting = "0.11"
glob = "0.3"
itertools = "0.10"
jsona = { path = "../jsona", version = "0.4" }
jsona-util = { path = "../jsona-util", version = "0.1" }
jsona-lsp = { path = "../jsona-lsp", version = "0.1", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"
serde_json = { version = "1", features = ["preserve_order"] }
async-ctrlc = { version = "1.2", features = ["stream"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
atty = "0.2"
tokio = { version = "1.20", features = [
    "macros",
    "sync",
    "fs",
    "time",
    "io-std",
    "rt-multi-thread",
    "parking_lot",
] }
lsp-async-stub = { version = "0.6", features = ["tokio-tcp", "tokio-stdio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.20", features = ["sync", "parking_lot", "io-util"] }

[[bin]]
name = "jsona"
path = "bin/jsona.rs"

[features]
default = ["lsp"]
lsp = ["jsona-lsp", "async-ctrlc"]