[package]
name = "jsona-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arc-swap = "1.5"
either = "1.7"
figment = { version = "0.10", features = ["json"] }
futures = "0.3.5"
indexmap = { version = "1.6", features = ["serde"] }
itertools = "0.10.3"
lsp-async-stub = "0.6" 
lsp-types = { version = "0.93", features = ["proposed"] }
once_cell = "1.5"
parking_lot = "0.12"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tap = "1.0"
jsona = { path = "../jsona" }
jsona-util = { path = "../jsona-util" }
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.5"
tracing = "0.1"