[package]
name = "jsona-lsp"
version = "0.2.0"
edition = "2021"
description = "Language server for JSONA"
homepage = "https://jsona.github.io/jsona/lsp"
repository = "https://github.com/jsona/jsona"
keywords = ["jsona", "lsp"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
arc-swap = "1.5"
either = "1.7"
figment = { version = "0.10", features = ["json"] }
futures = "0.3.5"
indexmap = { version = "~1.6", features = ["serde"] }
itertools = "0.10"
lsp-async-stub = "0.6" 
lsp-types = { version = "0.93", features = ["proposed"] }
once_cell = "1.5"
parking_lot = "0.12"
regex = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
jsona = { path = "../jsona", version = "0.4" }
jsona-util = { path = "../jsona-util", version = "0.2" }
jsona-schema = { path = "../jsona-schema", version = "0.1" }
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
url = { version = "2.2", features = ["serde"] }
uuid = { version = "1.1", features = ["v4"] }