[package]
name = "jsona-schema-validator"
version = "0.1.0"
edition = "2021"
description = "A jsonaschema validator implementation."
repository = "https://github.com/jsona/jsona"
keywords = ["jsona", "validator", "jsonaschema"]
license = "MIT OR Apache-2.0"


[dependencies]
thiserror = "1"
indexmap = { version = "1.9", features = ["serde", "rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
jsona = { path = "../jsona", version = "0.3"}
jsona-schema = { path = "../jsona-schema", version = "0.1"}
jsonschema = { version = "0.16", default-features = false }