[package]
name = "jsona-schema-validator"
version = "0.1.1"
edition = "2021"
description = "A jsonaschema validator implementation."
repository = "https://github.com/jsona/jsona"
keywords = ["jsona", "validator", "jsonaschema"]
license = "MIT OR Apache-2.0"


[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
jsona = { path = "../jsona", version = "0.4" }
jsona-schema = { path = "../jsona-schema", version = "0.1" }
jsonschema = { version = "0.16", default-features = false }