[package]
name = "jsona-schema-validator"
version = "0.2.0"
edition = "2021"
description = "A jsonaschema validator implementation."
repository = "https://github.com/jsona/jsona"
keywords = ["jsona", "validator", "jsonaschema"]
license = "MIT OR Apache-2.0"


[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
jsona = { path = "../jsona", version = "0.5" }
jsona-schema = { path = "../jsona-schema", version = "0.2" }
regex = "1.5"
fancy-regex = "0.10"
either = { version = "1.7", features = ["serde"] }
indexmap = { version = "~1.6", features = ["serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
once_cell = "1.5"
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"] }
url = { version = "2.2", features = ["serde"] }
ahash = { version = "0.7", features = ["serde"] }