[package]
name = "jsona-schema"
version = "0.1.1"
edition = "2021"
description = "A jsonschema dsl in jsona"
repository = "https://github.com/jsona/jsona"
keywords = ["jsona", "dsl", "jsonschema"]
license = "MIT OR Apache-2.0"

[dependencies]
either = { version = "1.7", features = ["serde"] }
indexmap = { version = "1.9", features = ["serde"] }
jsona = { path = "../jsona", version = "0.4" }
regex = "1.6"
fancy-regex = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
