[package]
name = "jsona-util"
version = "0.2.0"
edition = "2021"
description = "Shared code for jsona utilities."
repository = "https://github.com/jsona/jsona"
keywords = ["jsona", "util"]
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["serde"] }
url = { version = "2.2", features = ["serde"] }
anyhow = "1"
atty = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
jsona = { path = "../jsona", version = "0.4" }
jsona-schema = { path = "../jsona-schema", version = "0.1" }
jsona-schema-validator = { path = "../jsona-schema-validator", version = "0.1"}
globset = { version = "0.4", default-features = false }
arc-swap = "1.5"
parking_lot = "0.12"
ahash = { version = "0.7", features = ["serde"] }
indexmap = { version = "~1.6", features = ["serde"] }
regex = "1.6"
reqwest = { version ="0.11", default-features = false, features = ["rustls-tls"], optional = true }
md5 = "0.7"
urlencoding = "2.1"
once_cell = "1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt",
    "sync",
    "fs",
    "time",
    "io-std",
    "parking_lot",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "parking_lot", "io-util"] }

[features]
default = []
fetch = ["reqwest"]
