[package]
name = "jsona-wasm-cli"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1" 
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"], optional = true }
console_error_panic_hook = "0.1"
futures = "0.3"
js-sys = "0.3"
jsona = { path = "../jsona", version = "0.6" }
jsona-util = { path = "../jsona-util", version = "0.4" }
jsona-lsp = { path = "../jsona-lsp", version = "0.4", optional = true }
jsona-cli = { path = "../jsona-cli", version = "0.6", optional = true, default-features = false}
lsp-async-stub = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", default-features = false, features = ["sync", "parking_lot", "io-util"] }
time = { version = "0.3", features = ["parsing"] }
tracing = "0.1"
url = "2.4"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4"
gloo-utils = { version = "0.2", features = ["serde"] }

[features]
default = []
cli = ["jsona-cli/lsp", "clap"]
lsp = ["jsona-lsp", "lsp-async-stub"]
