[package]
name = "jsona-wasm-core"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
jsona = { path = "../jsona", version = "0.6" }
jsona-ast = { path = "../jsona-ast", version = "0.1" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }