[package]
name = "jsona-wasm-schema"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
jsona = { path = "../jsona", version = "0.6" }
jsona-schema = { path = "../jsona-schema", version = "0.3" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }