[package]
name = "jsona"
version = "0.3.0"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"
description = "JSONA is JSON superset. JSONA = JSON (less grammatical restrictions) + Annotation."
documentation = "https://github.com/sigoden/jsona"
repository = "https://github.com/sigoden/jsona"
keywords = ["jsona", "parser"]
categories = ["encoding", "parser-implementations"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.0"
either = "1.7.0"
globset = "0.4.9"
logos = "0.12.1"
once_cell = "1.13.0"
rowan = "0.15.5"
thiserror = "1.0.31"
