[package]
name = "jsona"
version = "0.4.0"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2021"
description = "A JSONA parser, analyzer and formatter library"
homepage = "https://jsona.github.io/jsona"
repository = "https://github.com/jsona/jsona"
keywords = ["jsona", "parser", "formatter", "linter", "ast"]
categories = ["encoding", "parser-implementations"]
license = "MIT OR Apache-2.0"
readme = false

[dependencies]
arc-swap = "1.5"
indexmap = "~1.6.2"
logos = "0.12"
once_cell = "1.13"
rowan = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"